# tese-lidar-biomass-prediction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
app/: main.py  run.sh
app/.streamlit/: config.toml
config/: allometry.yaml  pipeline.yaml
data/processed/01_kml/: ANA_A01_2015_2018_inventory_plots.geojson  ANA_A01_2015_2018_inventory_plots.kml  AND_A01_2013_2018_inventory_plots.geojson  AND_A01_2013_2018_inventory_plots.kml  BON_A01_2014_inventory_plots.kml  CAU_A01_2014_2018_inventory.kml  DUC_A01_2009_2011_inventory_plots.kml  DUC_A01_2016_inventory_plots.kml  FNA_A01_2013_inventory_plots.kml  FN_A01_2015_inventory_plots.geojson  FN_A01_2015_inventory_plots.kml  FST_A01_2013_inventory_plots.kml  HUM_A01_2014_inventory_plots.kml  JAM_A01_2011_inventory_plots.kml  JAM_A02_2011_inventory_plots.kml  JAM_A02_2013_inventory_plots.kml  JAM_A03_2013_inventory_plots.kml  PAR_A01_2013_2018_inventory_plots.kml  PAR_A01_2018_inventory_plots.kml  README.md  SAN_A01_2014_2016_inventory_plots.kml  SAN_A01b_2016_2018_inventory_plots.kml  SAN_A02_2014_inventory_plots.kml  (+12 more)
data/raw/: wood_density_genus.csv  wood_density_species.csv
notebooks/: 02_lidar_analysis.ipynb  03_inventory_analysis.ipynb  04_intersection_example.ipynb  05_intersection_analysis.ipynb  06_inventory_data_quality.ipynb  07_biomass_analysis.ipynb  README.md
src/: calculate_biomass.py  check_intersection.py  clip_lidar_to_plots.py  extract_kml.sh  find_intersections.py  plot_intersections_interactive.py  plot_intersections_map.py  prepare_inventory.py  train_model.py
(+326 files in other folders)
