[project]
name = "tese-lidar-biomass-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "landsatxplore>=0.12.1",
    "laspy[lazrs]>=2.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
